--- a/index.html
+++ b/index.html
@@ -800,7 +800,7 @@
         <div class="nav-container">
             <!-- الشعار -->
             <div class="logo">
-                <a href="Home.html">
+                <a href="index.html">
                     <i class="fas fa-graduation-cap"></i>
                     <span>منصة التربية النوعية</span>
                 </a>
@@ -1286,4 +1286,5 @@
         });
     </script>
 </body>
+
 </html>
